# RealityOps

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
env/: core.py  grader.py  models.py  tasks.py  worlds.py
scripts/: validate-submission.sh
server/: app.py
tests/: test_api_endpoints.py  test_env_core.py  test_inference_contract.py  test_tasks_and_grader.py
